<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/profile_bkeep" />

        <EditText
            android:id="@+id/etUsername"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etEmail"
            android:hint="@string/e_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnSave"
            android:text="@string/save_changes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_yellow"
            android:textColor="@color/dark_gray"/>

        <TextView
            android:text="@string/change_password"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etNewPassword"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnChangePassword"
            android:text="@string/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:backgroundTint="@color/light_yellow"/>
    </LinearLayout>
</ScrollView>
